--- a/UI/adminlogin.html
+++ b/UI/adminlogin.html
@@ -21,7 +21,7 @@
         role="banner" class="nav-bar w-nav">
         <div class="nav-container w-container">
             <div class="logo-div">
-                <a href="/" aria-current="page" class="logotext"><b>workerConnect</b></a>
+                <a href="#" aria-current="page" class="logotext"><b>workerConnect</b></a>
             </div>
 
             <nav role="navigation" class="nav-content w-nav-menu">
