--- a/UI/verifyworkers.html
+++ b/UI/verifyworkers.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Home - Admin</title>
+    <title>Verify Workers - Admin</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
@@ -27,8 +27,8 @@
 
             <nav role="navigation" class="nav-content w-nav-menu">
                 <div class="nav-menu">
-                    <a href="#" class="nav-link w-nav-link" style="color:#710101;"><b>Home</b></a>
-                    <a href="#" class="nav-link w-nav-link">Verify Workers</a>
+                    <a href="#" class="nav-link w-nav-link" ><b>Home</b></a>
+                    <a href="#" class="nav-link w-nav-link" style="color:#710101;">Verify Workers</a>
                     <a href="#" class="nav-link w-nav-link">Categories</a>
                     <a href="#" class="nav-link w-nav-link">Pairings</a>
                     <a href="#" class="nav-link w-nav-link">Clients</a>
@@ -46,28 +46,7 @@
     </div>
 
     <div class="page-wrapper">
-        <div class="section black-gradient  wf-section">
-            <div class="container">
-                <div class="row">
-                    <div class="grid">
-                      <div class="card" style="width: 90%;">
-                        <div class="card-body" >
-                          <p class="card-text" style="color: #000; font-size: 70px; font-weight: bold;text-align: center;margin-bottom: 0px;">500</p>
-                          <h5 class="card-title" style="color: #710101; font-size: larger; font-weight: bold;margin-top: 0%;text-align: center">Number of Workers</h5>
-                        </div>
-                      </div>
-                      <div class="card" style="width: 90%;">
-                        <div class="card-body" >
-                          <p class="card-text" style="color: #000; font-size: 70px; font-weight: bold;text-align: center;margin-bottom: 0px;">750</p>
-                          <h5 class="card-title" style="color: #710101; font-size: larger; font-weight: bold;margin-top: 0%;text-align: center">Number of Clients</h5>
-                        </div>
-                      </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="section light-color-gradient  wf-section" style="padding-top:3%;">
+        <div class="section light-color-gradient  wf-section" style="padding-top:3%">
             <div class="container w-container">
                 <div class="text-box _1200px center-align " >
                     <h2 class="heading h2">Pending Worker Requests</h2>
