--- a/UI/admin_home.html
+++ b/UI/admin_home.html
@@ -22,16 +22,17 @@
         role="banner" class="nav-bar w-nav">
         <div class="nav-container w-container">
             <div class="logo-div">
-                <a href="#" aria-current="page" class="logotext" style="margin-right: 350px;"><b>workerConnect</b></a>
+                <a href="#" aria-current="page" class="logotext" style="margin-right: 275px;"><b>workerConnect</b></a>
             </div>
 
             <nav role="navigation" class="nav-content w-nav-menu">
                 <div class="nav-menu">
-                    <a href="#" class="nav-link w-nav-link" style="color:#710101;"><b>Home</b></a>
-                    <a href="#" class="nav-link w-nav-link">Verify Workers</a>
+                    <a href="admin_home.html" class="nav-link w-nav-link" style="color:#710101;"><b>Home</b></a>
+                    <a href="verifyworkers.html" class="nav-link w-nav-link">Verify Workers</a>
                     <a href="#" class="nav-link w-nav-link">Categories</a>
-                    <a href="#" class="nav-link w-nav-link">Pairings</a>
-                    <a href="#" class="nav-link w-nav-link">Clients</a>
+                    <a href="admin_pairings.html" class="nav-link w-nav-link">Pairings</a>
+                    <a href="admin_clients.html" class="nav-link w-nav-link">Clients</a>
+                    <a href="admin_workers.html" class="nav-link w-nav-link">Workers</a>
                 </div>
                 
                 <div class="nav-cta-button-container">
