Client Home Page

--- a/UI/admin_cateogory.html
+++ b/UI/admin_cateogory.html
@@ -48,11 +48,9 @@
 
         <nav role="navigation" class="nav-content w-nav-menu">
           <div class="nav-menu">
-            <a href="#" class="nav-link w-nav-link" 
-              ><b>Home</b></a
-            >
+            <a href="#" class="nav-link w-nav-link">Home</a>
             <a href="#" class="nav-link w-nav-link">Verify Workers</a>
-            <a href="#" class="nav-link w-nav-link" style="color: #710101">Categories</a>
+            <a href="#" class="nav-link w-nav-link" style="color: #710101"><b>Categories</b></a>
             <a href="#" class="nav-link w-nav-link">Pairings</a>
             <a href="#" class="nav-link w-nav-link">Clients</a>
           </div>
