--- a/UI/clientProfile.html
+++ b/UI/clientProfile.html
@@ -43,8 +43,7 @@
             <div class="profile-area-right flex">
                 <p> <b>Name</b>: Sanket Disale</p>
                 <p><b> Address</b>: A.P.Bibwewadi , Pune-411037</p>
-                <p><b>Location</b> : <a href="https://goo.gl/maps/1dr74ZHhdpKJZKNp7" target="_blnk">LINK</a> </p>
-
+                <p> Location : <a href="https://goo.gl/maps/55pDAPC4o4Udxmf69" target="_blank">LINK</a> </p>
             </div>
         </div>
     </section>
