Worker Register page

--- a/UI/clientregister.html
+++ b/UI/clientregister.html
@@ -49,7 +49,7 @@
         <div class="section light-color-gradient wf-section">
             <div class="container">
                 <div class="w-layout-grid hero-grid">
-                    <img src="./assets/client.jpg" loading="eager" width="470" alt="" class="hero-illustration" />
+                    <img src="./assets/client.jpg" loading="eager" width="470" alt="" class="hero-illustration" style="position: fixed; margin-left:50%; margin-bottom: 35%;"/>
                     <div class="text-box _500px">
                         <h1 class="heading h1">Register as a Client.</h1>
                         <br />
@@ -71,6 +71,27 @@
                         <input type="password" class="text-field no-margin w-input" maxlength="256" name="Email-2"
                             data-name="Email 2" placeholder="Confirm password" id="Email-2" required="" />
                         <br/>
+
+                        <label for="Email-2" class="form-label">Date of Birth: </label>
+                        <input type="date" class="text-field no-margin w-input" maxlength="256" name="Email-2"
+                            data-name="Email 2" placeholder="Date of Birth" id="Email-2" required="" />
+                        <br/>
+
+                        <label for="Email-2" class="form-label">Address: </label>
+                        <input type="text" class="text-field no-margin w-input" maxlength="256" name="Email-2"
+                            data-name="Email 2" placeholder="Google Map Link" id="Email-2" required="" />
+                        <br/>
+
+                        <label for="Email-2" class="form-label">Short Description about you: </label>
+                        <input type="text" class="text-field no-margin w-input" maxlength="256" name="Email-2"
+                            data-name="Email 2" placeholder="Introduce yourself" id="Email-2" required="" />
+                        <br/>
+
+                        <label for="Email-2" class="form-label">Government ID Card: </label>
+                        <input type="file" class="text-field no-margin w-input" maxlength="256" name="Email-2"
+                            data-name="Email 2" placeholder="Confirm password" id="Email-2" required="" style="padding-left:2%;padding-top:2%"/>
+                        <br/>
+
                         <div class="container2 text-center">
                             <div class="row">
                               <span class="col">
@@ -78,7 +99,7 @@
                               </span>
                               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                               <span class="col">
-                                <a class="account-label" href="clientlogin.html">Already have an account ?</a>
+                                <a class="account-label" href="clientlogin.html">Already have an account?</a>
                               </span>
                             </div>
                         </div>
