--- a/UI/admin_cateogory.html
+++ b/UI/admin_cateogory.html
@@ -26,53 +26,36 @@
   </head>
   <body>
     <!-- Navbar Section  -->
-    <div
-      data-collapse="small"
-      data-animation="default"
-      data-duration="400"
-      data-easing="ease"
-      data-easing2="ease"
-      role="banner"
-      class="nav-bar w-nav"
-    >
-      <div class="nav-container w-container">
-        <div class="logo-div">
-          <a
-            href="#"
-            aria-current="page"
-            class="logotext"
-            style="margin-right: 350px"
-            ><b>workerConnect</b></a
-          >
-        </div>
+    <div data-collapse="small" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
+        role="banner" class="nav-bar w-nav">
+        <div class="nav-container w-container">
+            <div class="logo-div">
+                <a href="#" aria-current="page" class="logotext" style="margin-right: 275px;"><b>workerConnect</b></a>
+            </div>
 
-        <nav role="navigation" class="nav-content w-nav-menu">
-          <div class="nav-menu">
-            <a href="#" class="nav-link w-nav-link">Home</a>
-            <a href="#" class="nav-link w-nav-link">Verify Workers</a>
-            <a href="#" class="nav-link w-nav-link" style="color: #710101"><b>Categories</b></a>
-            <a href="#" class="nav-link w-nav-link">Pairings</a>
-            <a href="#" class="nav-link w-nav-link">Clients</a>
-          </div>
-
-          <div class="nav-cta-button-container">
-            <a href="#" class="nav-link cta-button1 w-nav-link">Log Out</a>
-          </div>
-        </nav>
-        <div class="menu-button w-nav-button">
-          <img
-            src="https://assets.website-files.com/62aee78456e4207786ac4d18/62aee78456e4200f2eac4d49_Menu%20Icon.svg"
-            loading="lazy"
-            width="24"
-            alt=""
-            class="menu-icon"
-          />
+            <nav role="navigation" class="nav-content w-nav-menu">
+                <div class="nav-menu">
+                    <a href="admin_home.html" class="nav-link w-nav-link">Home</a>
+                    <a href="verifyworkers.html" class="nav-link w-nav-link" >Verify Workers</a>
+                    <a href="admin_cateogory.html" class="nav-link w-nav-link" style="color:#710101;"><b>Categories</b></a>
+                    <a href="admin_pairings.html" class="nav-link w-nav-link">Pairings</a>
+                    <a href="admin_clients.html" class="nav-link w-nav-link">Clients</a>
+                    <a href="admin_workers.html" class="nav-link w-nav-link">Workers</a>
+                </div>
+                
+                <div class="nav-cta-button-container">
+                    <a href="#" class="nav-link cta-button1 w-nav-link">Log Out</a>
+                </div>
+            </nav>
+            <div class="menu-button w-nav-button">
+                <img src="https://assets.website-files.com/62aee78456e4207786ac4d18/62aee78456e4200f2eac4d49_Menu%20Icon.svg"
+                    loading="lazy" width="24" alt="" class="menu-icon" />
+            </div>
         </div>
-      </div>
     </div>
 
     <!-- Categories section  -->
-    <section class="category-section" style="margin-top: 2rem;">
+    <section class="category-section light-color-gradient" style="margin-top: 2rem;">
    <div class="container catogryAddingBtn"> 
     <button class="table-accept-btn btn-add" onclick="showModel1()">Add Categories</button>
    </div>
