--- a/UI/admin_home.html
+++ b/UI/admin_home.html
@@ -29,7 +29,7 @@
                 <div class="nav-menu">
                     <a href="admin_home.html" class="nav-link w-nav-link" style="color:#710101;"><b>Home</b></a>
                     <a href="verifyworkers.html" class="nav-link w-nav-link">Verify Workers</a>
-                    <a href="#" class="nav-link w-nav-link">Categories</a>
+                    <a href="admin_cateogory.html" class="nav-link w-nav-link">Categories</a>
                     <a href="admin_pairings.html" class="nav-link w-nav-link">Pairings</a>
                     <a href="admin_clients.html" class="nav-link w-nav-link">Clients</a>
                     <a href="admin_workers.html" class="nav-link w-nav-link">Workers</a>
