--- a/UI/client_mytasks.html
+++ b/UI/client_mytasks.html
@@ -27,9 +27,9 @@
 
             <nav role="navigation" class="nav-content w-nav-menu">
                 <div class="nav-menu">
-                    <a href="client_home.html" class="nav-link w-nav-link" style="color:#710101;"><b>Home</b></a>
+                    <a href="client_home.html" class="nav-link w-nav-link"><b>Home</b></a>
                     <a href="#" class="nav-link w-nav-link" id="addTask1">Add Task</a>
-                    <a href="client_mytasks.html" class="nav-link w-nav-link">My Tasks</a>
+                    <a href="client_mytasks.html" class="nav-link w-nav-link"  style="color:#710101;"><b>My Tasks</b></a>
                     <a href="client_notification.html" class="nav-link w-nav-link">Notifications</a>
                     <a href="clientProfile.html" class="nav-link w-nav-link">My Profile</a>
                 </div>
