--- a/UI/worker_home.html
+++ b/UI/worker_home.html
@@ -31,7 +31,7 @@
                     <a href="#" class="nav-link w-nav-link" id="addTask1">My Clients</a>
                     <a href="worker_myworks.html" class="nav-link w-nav-link">My Works</a>
                     <a href="worker_notification.html" class="nav-link w-nav-link">Notifications</a>
-                    <a href="#" class="nav-link w-nav-link">My Profile</a>
+                    <a href="workerProfile.html" class="nav-link w-nav-link">My Profile</a>
                 </div>
                 
                 <div class="nav-cta-button-container">
