--- a/UI/worker_myworks.html
+++ b/UI/worker_myworks.html
@@ -27,11 +27,11 @@
 
             <nav role="navigation" class="nav-content w-nav-menu">
                 <div class="nav-menu">
-                    <a href="worker_home.html" class="nav-link w-nav-link" style="color:#710101;"><b>Home</b></a>
+                    <a href="worker_home.html" class="nav-link w-nav-link" >Home</a>
                     <a href="#" class="nav-link w-nav-link" id="addTask1">My Clients</a>
-                    <a href="worker_myworks.html" class="nav-link w-nav-link">My Works</a>
+                    <a href="worker_myworks.html" class="nav-link w-nav-link" style="color:#710101;"><b>My Works</b></a>
                     <a href="worker_notification.html" class="nav-link w-nav-link">Notifications</a>
-                    <a href="#" class="nav-link w-nav-link">My Profile</a>
+                    <a href="workerProfile.html" class="nav-link w-nav-link">My Profile</a>
                 </div>
                 
                 <div class="nav-cta-button-container">
