--- a/UI/workerProfile.html
+++ b/UI/workerProfile.html
@@ -37,7 +37,7 @@
     </div>
 </div>
     
-    <section class="myProfile" style="margin-top: 2rem;">
+    <section class="myProfile section light-color-gradient" style="margin-top: 2rem;">
         <div class="containerSD profile-area flex">
             <div class="profile-area-left">
                 <img src="Assets/admin.jpg" alt="">
