--- a/UI/client_mytasks.html
+++ b/UI/client_mytasks.html
@@ -65,7 +65,9 @@
                                   <h1 class="card-title" style="color: #616161; font-size: medium; font-weight: bold;text-align: start;margin-top: 2%;margin-bottom: 0%;">Date Published: 11 February 2023</h1>
                                   <h1 class="card-title" style="color: #a33434; font-size: medium; font-weight: bold;text-align: end;margin-top: 1%;margin-bottom: 0%;">15 Workers have applied!</h1>
                                   <div class="grid">
-                                    <button class="nav-link cta-button1 w-nav-link" style="margin-top: 5%; text-align: center;">View Details</button>
+                                    <a href="client_nego.html" target="_blank">
+                                        <button class="nav-link cta-button1 w-nav-link" style="margin-top: 5%; text-align: center;">View Details</button>
+                                    </a>
                                     <button class="nav-link cta-button1 w-nav-link" style="margin-top: 5%; text-align: center;background-color: black;">Mark as Completed!</button>
                                   </div>
                                   
@@ -78,7 +80,10 @@
                                   <h1 class="card-title" style="color: #616161; font-size: medium; font-weight: bold;text-align: start;margin-top: 2%;margin-bottom: 0%;">Date Published: 11 February 2023</h1>
                                   <h1 class="card-title" style="color: #a33434; font-size: medium; font-weight: bold;text-align: end;margin-top: 1%;margin-bottom: 0%;">15 Workers have applied!</h1>
                                   <div class="grid">
-                                    <button class="nav-link cta-button1 w-nav-link" style="margin-top: 5%; text-align: center;">View Details</button>
+                                    <a href="client_nego.html" target="_blank">
+                                        <button class="nav-link cta-button1 w-nav-link" style="margin-top: 5%; text-align: center;">View Details</button>
+                                    </a>
+
                                     <button class="nav-link cta-button1 w-nav-link" style="margin-top: 5%; text-align: center;background-color: black;">Mark as Completed!</button>
                                   </div>
                                   
