--- a/UI/worker_notification.html
+++ b/UI/worker_notification.html
@@ -52,13 +52,18 @@
                     <br>
                     <div class="card2" style="width: 100%;">
                         <div class="card-body" >
-                                    <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-bottom: 0px;">Your request is under scrutiny.</span>
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
-                                    <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-bottom: 0px;">09.26</span>
+                            <div class="row" >
+                                <span class="col" style="text-align: left;">
+                                    <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-left: 100px;">Your request is under scrutiny.</span>
+                                </span>
+                                <span class="col col-lg-2" style="text-align: right;">
+                                    <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 100px;">09.26</span>
+                                </span>
+                            </div>
                         </div>
                     </div>
                     <br>
-                    <div class="card" style="width: 100%;">
+                    <div class="card2" style="width: 100%;">
                         <div class="card-body" >
                             <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-bottom: 0px;">Your request has been accepted.</span>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -74,7 +79,7 @@
                         </div>
                     </div>
                     <br>
-                    <div class="card" style="width: 100%;">
+                    <div class="card2" style="width: 100%;">
                         <div class="card-body" >
                             <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-bottom: 0px;">Your request has been accepted.</span>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
