--- a/UI/worker_notification.html
+++ b/UI/worker_notification.html
@@ -47,51 +47,66 @@
     <div class="page-wrapper">
         <div class="section light-color-gradient  wf-section" style="padding-top:3%">
             <div class="container w-container">
-                <div class="text-box _1200px center-align " >
+                <div class="text-box _1200px center-align ">
                     <h2 class="heading h2">Notifications</h2>
                     <br>
                     <div class="card2" style="width: 100%;">
-                        <div class="card-body" >
-                            <div class="row" >
-                                <span class="col" style="text-align: left;">
-                                    <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-left: 100px;">Your request is under scrutiny.</span>
-                                </span>
-                                <span class="col col-lg-2" style="text-align: right;">
-                                    <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 100px;">09.26</span>
-                                </span>
+                        <div class="card-body">
+                            <div class="grid">
+                                <span class="card-text"
+                                    style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-left: 80px;">Your
+                                    request is under scrutiny.</span>
+                                <span class="card-text"
+                                    style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
                             </div>
                         </div>
                     </div>
-                    <br>
-                    <div class="card2" style="width: 100%;">
-                        <div class="card-body" >
-                            <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-bottom: 0px;">Your request has been accepted.</span>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-bottom: 0px;">09.26</span>
+                </div>
+                <br>
+                <div class="card2" style="width: 100%;">
+                    <div class="card-body">
+                        <div class="grid">
+                            <span class="card-text"
+                                style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-left: 80px;">Your
+                                request has been accepted.</span>
+                            <span class="card-text"
+                                style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
                         </div>
                     </div>
-                    <br>
-                    <div class="card2" style="width: 100%;">
-                        <div class="card-body" >
-                            <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-bottom: 0px;">Your request has been accepted.</span>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-bottom: 0px;">09.26</span>
+                </div>
+                <br>
+                <div class="card2" style="width: 100%;">
+                    <div class="card-body">
+                        <div class="grid">
+                            <span class="card-text"
+                                style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-left: 80px;">Your
+                                request has been accepted.</span>
+                            <span class="card-text"
+                                style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
                         </div>
                     </div>
-                    <br>
-                    <div class="card2" style="width: 100%;">
-                        <div class="card-body" >
-                            <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-bottom: 0px;">Your request has been accepted.</span>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-bottom: 0px;">09.26</span>
+                </div>
+                <br>
+                <div class="card2" style="width: 100%;">
+                    <div class="card-body">
+                        <div class="grid">
+                            <span class="card-text"
+                                style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-left: 80px;">Your
+                                request has been accepted.</span>
+                            <span class="card-text"
+                                style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
                         </div>
                     </div>
-                    <br>
-                    <div class="card2" style="width: 100%;">
-                        <div class="card-body" >
-                            <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-bottom: 0px;">Your request has been accepted.</span>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <span class="card-text" style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-bottom: 0px;">09.26</span>
+                </div>
+                <br>
+                <div class="card2" style="width: 100%;">
+                    <div class="card-body">
+                        <div class="grid">
+                            <span class="card-text"
+                                style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-left: 80px;">Your
+                                request has been accepted.</span>
+                            <span class="card-text"
+                                style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
                         </div>
                     </div>
                 </div>
