--- a/UI/client_notification.html
+++ b/UI/client_notification.html
@@ -29,7 +29,8 @@
                     <a href="client_home.html" class="nav-link w-nav-link">Home</a>
                     <a href="#" class="nav-link w-nav-link" id="addTask1">Add Task</a>
                     <a href="client_mytasks.html" class="nav-link w-nav-link">My Tasks</a>
-                    <a href="client_notification.html" class="nav-link w-nav-link" style="color:#710101;"> <b>Notifications</b> </a>
+                    <a href="client_notification.html" class="nav-link w-nav-link" style="color:#710101;">
+                        <b>Notifications</b> </a>
                     <a href="clientProfile.html" class="nav-link w-nav-link">My Profile</a>
                 </div>
 
@@ -53,11 +54,11 @@
                     <div class="card2" style="width: 100%;">
                         <div class="card-body">
                             <div class="grid">
-                            <span class="card-text"
-                                style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-left: 80px;">Your
-                                request is under scrutiny.</span>
-                            <span class="card-text"
-                                style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
+                                <span class="card-text"
+                                    style="color: #000; font-size: larger; font-weight: bold;text-align: left;margin-left: 80px;">Your
+                                    request is under scrutiny.</span>
+                                <span class="card-text"
+                                    style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
                             </div>
                         </div>
                     </div>
@@ -71,7 +72,7 @@
                                 request has been accepted.</span>
                             <span class="card-text"
                                 style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
-                            </div>
+                        </div>
                     </div>
                 </div>
                 <br>
@@ -83,7 +84,7 @@
                                 request has been accepted.</span>
                             <span class="card-text"
                                 style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
-                            </div>
+                        </div>
                     </div>
                 </div>
                 <br>
@@ -95,7 +96,7 @@
                                 request has been accepted.</span>
                             <span class="card-text"
                                 style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
-                            </div>
+                        </div>
                     </div>
                 </div>
                 <br>
@@ -107,7 +108,7 @@
                                 request has been accepted.</span>
                             <span class="card-text"
                                 style="color: #000; font-size: larger; font-weight: bold;text-align: right;margin-right: 80px;">09.26&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12/02/2023</span>
-                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
