--- a/UI/clientProfile.html
+++ b/UI/clientProfile.html
@@ -42,7 +42,7 @@
             
             <div class="profile-area-right flex">
                 <p> <b>Name</b>: Sanket Disale</p>
-                <p> <b>Mobail No</b>: 9356456616</p>
+                <p> <b>Mobile No</b>: 9356456616</p>
                 <p> <b>Email</b>: sanketdisale871@gmail.com</p>                
                 <p><b> Address</b>: A.P.Bibwewadi , Pune-411037</p>
                 <p> <b>Location</b> : <a href="https://goo.gl/maps/55pDAPC4o4Udxmf69" target="_blank">LINK</a> </p>
