Categories Page and worker register updated

--- a/UI/admin_cateogory.html
+++ b/UI/admin_cateogory.html
@@ -55,93 +55,92 @@
     </div>
 
     <!-- Categories section  -->
-    <section class="category-section light-color-gradient" style="margin-top: 2rem;">
+    <section class="category-section light-color-gradient" style="padding-top: 2rem; padding-bottom:14rem">
    <div class="container catogryAddingBtn"> 
-    <button class="table-accept-btn btn-add" onclick="showModel1()">Add Categories</button>
+    <button class="nav-link cta-button1 w-nav-link" onclick="showModel1()">Add Categories</button>
    </div>
 
         <div class="container flex">
 
-            <div class="category-item flex">
+            <div class="category-item flex" style="padding-right: 2%; padding-left: 2%">
                 <div class="category-item-left">
-                    <p>Catogory: Carpentry</p>
-                    <button class="table-accept-btn" onclick="showModel()">Edit</button>
-                    <button class="table-reject-btn" onclick="showAlert()">Remove</button>
+                    <p style="color:black">Category: Carpentry</p>
+                    <button class="nav-link cta-button1 w-nav-link" style="" onclick="showModel()">Edit</button>
+                    <button class="nav-link cta-button1 w-nav-link" style="background-color: black;" onclick="showAlert()">Remove</button>
                 </div>
-                <div class="category-item-right">
-                    <p>Workers</p>
-                    <p style="text-align: center;">
+                 <div class="category-item-right">
+                    <p style="color:black">Workers</p>
+                    <p style="text-align: center; color:black; font-weight: bold; font-size: 250%;">
                         785
                     </p>
                 </div>
             </div>
-            <div class="category-item flex">
+            <div class="category-item flex" style="padding-right: 2%; padding-left: 2%">
                 <div class="category-item-left">
-                    <p>Catogory : Plumber</p>
-                    <button class="table-accept-btn" onclick="showModel()">Edit</button>
-                    <button class="table-reject-btn" onclick="showAlert()">Remove</button>
+                    <p style="color:black">Category: Carpentry</p>
+                    <button class="nav-link cta-button1 w-nav-link" style="" onclick="showModel()">Edit</button>
+                    <button class="nav-link cta-button1 w-nav-link" style="background-color: black;" onclick="showAlert()">Remove</button>
                 </div>
-                <div class="category-item-right">
-                    <p>Workers</p>
-                    <p style="text-align: center;">
+                 <div class="category-item-right">
+                    <p style="color:black">Workers</p>
+                    <p style="text-align: center; color:black; font-weight: bold; font-size: 250%;">
                         785
                     </p>
                 </div>
             </div>
-            <div class="category-item flex">
+            <div class="category-item flex" style="padding-right: 2%; padding-left: 2%">
                 <div class="category-item-left">
-                    <p>Catogory : Cleaning</p>
-                    <button class="table-accept-btn" onclick="showModel()">Edit</button>
-                    <button class="table-reject-btn" onclick="showAlert()">Remove</button>
+                    <p style="color:black">Category: Carpentry</p>
+                    <button class="nav-link cta-button1 w-nav-link" style="" onclick="showModel()">Edit</button>
+                    <button class="nav-link cta-button1 w-nav-link" style="background-color: black;" onclick="showAlert()">Remove</button>
                 </div>
-                <div class="category-item-right">
-                    <p>Workers</p>
-                    <p style="text-align: center;">
+                 <div class="category-item-right">
+                    <p style="color:black">Workers</p>
+                    <p style="text-align: center; color:black; font-weight: bold; font-size: 250%;">
                         785
                     </p>
                 </div>
             </div>
-            <div class="category-item flex">
+            <div class="category-item flex" style="padding-right: 2%; padding-left: 2%">
                 <div class="category-item-left">
-                    <p>Catogory : Electrical</p>
-                    <button class="table-accept-btn" onclick="showModel()">Edit</button>
-                    <button class="table-reject-btn" onclick="showAlert()">Remove</button>
+                    <p style="color:black">Category: Carpentry</p>
+                    <button class="nav-link cta-button1 w-nav-link" style="" onclick="showModel()">Edit</button>
+                    <button class="nav-link cta-button1 w-nav-link" style="background-color: black;" onclick="showAlert()">Remove</button>
                 </div>
-                <div class="category-item-right">
-                    <p>Workers</p>
-                    <p style="text-align: center;">
+                 <div class="category-item-right">
+                    <p style="color:black">Workers</p>
+                    <p style="text-align: center; color:black; font-weight: bold; font-size: 250%;">
                         785
                     </p>
                 </div>
             </div>
-            <div class="category-item flex">
+            <div class="category-item flex" style="padding-right: 2%; padding-left: 2%">
                 <div class="category-item-left">
-                    <p>Catogory : Painting</p>
-                    <button class="table-accept-btn" onclick="showModel()">Edit</button>
-                    <button class="table-reject-btn" onclick="showAlert()">Remove</button>
+                    <p style="color:black">Category: Carpentry</p>
+                    <button class="nav-link cta-button1 w-nav-link" style="" onclick="showModel()">Edit</button>
+                    <button class="nav-link cta-button1 w-nav-link" style="background-color: black;" onclick="showAlert()">Remove</button>
                 </div>
-                <div class="category-item-right">
-                    <p>Workers</p>
-                    <p style="text-align: center;">
+                 <div class="category-item-right">
+                    <p style="color:black">Workers</p>
+                    <p style="text-align: center; color:black; font-weight: bold; font-size: 250%;">
                         785
                     </p>
                 </div>
             </div>
-            <div class="category-item flex">
+            <div class="category-item flex" style="padding-right: 2%; padding-left: 2%">
                 <div class="category-item-left">
-                    <p>Catogory : Pest Control</p>
-                    <button class="table-accept-btn" onclick="showModel()">Edit</button>
-                    <button class="table-reject-btn" onclick="showAlert()">Remove</button>
+                    <p style="color:black">Category: Carpentry</p>
+                    <button class="nav-link cta-button1 w-nav-link" style="" onclick="showModel()">Edit</button>
+                    <button class="nav-link cta-button1 w-nav-link" style="background-color: black;" onclick="showAlert()">Remove</button>
                 </div>
-                <div class="category-item-right">
-                    <p>Workers</p>
-                    <p style="text-align: center;">
+                 <div class="category-item-right">
+                    <p style="color:black">Workers</p>
+                    <p style="text-align: center; color:black; font-weight: bold; font-size: 250%;">
                         785
                     </p>
                 </div>
             </div>
-        </div>
-
+            
         <div id="catModel1" class="modal">
             <div class="modal-content " style="padding-left: 50px; padding-top: 30px;">
                 <label for="exampleFormControlInput1" class="form-label"> Enter Category Name :</label>
